--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = xlink-kme-sbml/_version.py
-versionfile_build = xlink-kme-sbml/_version.py
+versionfile_source = xlink_kme_sbml/_version.py
+versionfile_build = xlink_kme_sbml/_version.py
 tag_prefix =
-parentdir_prefix = xlink-kme-sbml-
+parentdir_prefix = xlink_kme_sbml-
